kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: thaye
  labels:
    app: thaye
spec:
  replicas: 1
  selector:
    matchLabels:
      app: thaye
  template:
    metadata:
      name: thaye
      labels:
        app: thaye
    spec:
      containers:
        - name: thaye
          image: ghcr.io/zgamelogic/thaye:master
          imagePullPolicy: Always
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 15
            periodSeconds: 5
      restartPolicy: Always
      imagePullSecrets:
        - name: ghcr-secret
