kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: thaye-ingress
spec:
  rules:
    - host: "thaye.zgamelogic.com"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: thaye
                port:
                  number: 8080
  tls:
    - hosts:
        - "thaye.zgamelogic.com"
      secretName: ingress-tls
